--- a/BusTicketManagementSystem/User_Controls/Bus_Fare.resx
+++ b/BusTicketManagementSystem/User_Controls/Bus_Fare.resx
@@ -121,48 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACcAAAAjCAYAAAAXMhMjAAAABGdBTUEAALGPC/xhBQAAAolJREFUWEfN
-        mD+L1EAYxiNYaCeC2FhYCFpeqZX3Ec5PoN/gXJxdOEHZSuxuxcLSK1UEtfH8A+fqqQiCXmEh/sGzsLDR
-        BUGFKx7fJ5Mskn12Molmcw/8Nsu8M/M+mbyZ7CYpVQeHki7OGmuJw3vjh31HZfy4d3Z8aEeXnMGRLEMN
-        9XDYJlkdT94Mq2meaHWw187usg3cKkzUFFuW71KaN6geDljHdTHBLBgmi9ifOSmoj11m7LkYNEuepj4m
-        1MXNQse2uJE5ytTDgujUHvQzlsOG7NQWDq+8sR6Oyg5tQ1/m8qIMVmT+CnDc2HNOxyvj0Ke5ezIYAQ29
-        /oIJffoGLN7RY6KhL/uoXG9cneUn3siGmes/8EbJaTN1+42PPfoAHLyg5yiFvuzLaCJQwmDdJ6cpFScL
-        K8Dol19ZFY9gRHMqMBWuTpmxnLwvT0bFS5GNAXgZiYop8lWudXllYwAqZtVy5pb9GF5mFQ8iG6eQXyYe
-        VXwaVJUTGiMbp7CtzXELobhdqLiCtUaduq7jQWRjgE3bYG/ZPqZiCpqiWHsqHkQ2BuCqUTEFzpX+/hMY
-        ftTxUmRjCUzGpKHaozFuwNyIaz8l7DHxWwYCMBn3OoqPsb8vGWMnr3nzNHb+fu3nrD0hHDZFoBSuTL7B
-        KnF1aTQvg6sv9TwB3tLcCxGIhgZYf9wqCG+AYvGvmDGq4hY0ZM0NCo2NUHVvNAbb95dwF3P+p3p7/1U1
-        Ds+8McphXnZqC4djmbNMM6q9CKzWiupjpzl+LDrPDuanD6kl7LMOX+XA5vmc5g+qg91m8K4Y3Bz8p8W8
-        ccKO9JUA7xo12f+C8zucSPPVEt9AOizZZGsG30z++5tNh276xjSoJPkD7YhJvMnMYDkAAAAASUVORK5C
-        YII=
-</value>
-  </data>
-  <data name="searchBox.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAANcAAAAjCAYAAAAHfp+6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFTSURBVHhe7d0hTgQxFIDhkUgMybxWjEWuYdpdA0fgCEjk
-        ypXjOAKSY3AEjoJEIqGvqVjC2zBb8tz/kk+1I/80u6IdrBHZXoeQHqKkBcBp2kkIu01L5/ToRhnTRwz5
-        C8B6Ms6fJbZDS+nnhDC/Wh8BWE8kv03T7UXLSsPKj9ZGAOcrPT21tMpvLD3SjE0A+kxXN2M5tXYbaxFA
-        P5Ht/RAl761FAP8gaSlxpcVcBNCPuAAnxAU4IS7ACXEBTogLcEJcgBPiApwQF+CEuAAnxAU4IS7ACXEB
-        TogLcEJcgBPiApwQF+CEuAAnxAU4IS7ACXEBTlpcB3MRQL8aV0x35iKAbvruwqD3WluLAPrpS0H1Outy
-        hD1bGwCcTx81qWHp6OkVQn63NgJYT5/gqvfEH08J7DJKfrE+APA3PbF+hXU8+jBDfVJI/6IHsELexzjn
-        llCbYfgGJHmg35iC/RIAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnAddTrip.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAKUAAAAkCAYAAADox/qnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE8SURBVHhe7dyhTgQxFEbhSiQSiUQi9xH2EXC7gpnZrELi
-        wDDbrEEieSwkEolEtaXduYIJRU7zk5ybfO6OO2mmpo5h/sXcHtP1cEjb7BFYyHbn48qS+3vK0uDD2+BT
-        AlroxvDRj3FtCc5nCrL+IbC4fHJaitNsHtJZ58N7dRlo4RA+98d0YUlySkJD5+ONJelc7+NdbQloKl+A
-        LEnnTreh2hLQElFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFC
-        DlFCDlFCDlFCDlFCzs8oe5/uq0tAS7Mox7iuLgEN5Q53lqRzm+d0PvjwVVsEWumf0pUlOU2ptLYItBFe
-        LMX5TP+WnJhoq/fhtTyyZhn+nvyzeXl6W6jcyIEFlUOwPNBr6TGM6jj3DWORToN88WHTAAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="busNumberText.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="busFareText.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKUAAAAjCAYAAAD1wsofAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFKSURBVHhe7dwhUgQxEEDRSCSGqkkixiLXMBPWwBE4AhK5
@@ -174,9 +133,6 @@
         dFWuwEEAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -189,38 +145,22 @@
   <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="editColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="editColumn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSetFare.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUNJREFUSEvd
-        ld1Rw0AMhFUCJVACJdFJ6CB5I/ASd5B0kHQAHZAOSAfHytmz7kdnzpnJA3wzOx5LK/n+5iz/j/AuT2Er
-        O+grvEnoknq15lUe2cYHhme3wRKhB9vljCP3Cm6RNxMkhso4p60c8NSaSxa/amBbA8FzYWrporNlmYSd
-        POBjn5kHe8K0kRnmlDSPjB8pZsKUkSYbujZonBSMepP6GTbSpKNxWfDUNd+zJIN7MtUwbKTJQtOaJ0ux
-        GouIdwKZMkoDlW2owmb6kb0uF9+/6Z9Eu1EaoKp5hDOZPda0GpWp0TzSGnkUbUZmwLlm2OW35ipajcJw
-        Yriip7mKdqMwvDCc0dtcxRIDwfSqqO6SJc2hM8sMBMtTsYZW2I8jnh9JvEfOZadn2jcvV+vHg8T9fjgR
-        zkSXq/f6Vql3aI78DyPyA/ZWM3I8xeiZAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="deleteColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="deleteColumn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASZJREFUSEvV
-        VMFtAjEQvBIoIc8IxRYdJB0kJaSEdQVQAiVQQjpISqAD+J4P6egAPMeirDZ7trlHSEaaz3pm1mfvubk7
-        +gXNOk/L6OhTEjWssWw6ogtf0YeTxdaFD5ZNhxUsybJpSMdAVqhk90QvLM9jCMP5GiE38XJH7xz7DRRx
-        3q2n1ZXYXYnwXfWpwXq4M6uBRJzTonPh+RbCw/Y8as59lKWdA/ypdkCB8HLMOP5/g4OjN2U8oqanh3VH
-        qUWNY8YxjJ4wRU/9wYVXPTWoYU1q4eWYcfxsUM+/0aB/pAdtbH3YwyyJmtbByzF5aGOajp2+A9S0ju1l
-        aGMt2V6GZa4h28tIL+LWCsgyvaJsL8P42Yqs+skkMClpV5vL+57lBlq2/Taa5gyif9tEzWdH8wAAAABJ
-        RU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAKUAAAAkCAYAAADox/qnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE8SURBVHhe7dyhTgQxFEbhSiQSiUQi9xH2EXC7gpnZrELi
+        wDDbrEEieSwkEolEtaXduYIJRU7zk5ybfO6OO2mmpo5h/sXcHtP1cEjb7BFYyHbn48qS+3vK0uDD2+BT
+        AlroxvDRj3FtCc5nCrL+IbC4fHJaitNsHtJZ58N7dRlo4RA+98d0YUlySkJD5+ONJelc7+NdbQloKl+A
+        LEnnTreh2hLQElFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFC
+        DlFCDlFCDlFCDlFCzs8oe5/uq0tAS7Mox7iuLgEN5Q53lqRzm+d0PvjwVVsEWumf0pUlOU2ptLYItBFe
+        LMX5TP+WnJhoq/fhtTyyZhn+nvyzeXl6W6jcyIEFlUOwPNBr6TGM6jj3DWORToN88WHTAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <metadata name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>141, 17</value>
+  </metadata>
+  <metadata name="bunifuDragControl2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>301, 17</value>
   </metadata>
 </root>
