--- a/BusTicketManagementSystem/User_Controls/Ticket_booking.resx
+++ b/BusTicketManagementSystem/User_Controls/Ticket_booking.resx
@@ -185,6 +185,18 @@
         nfLb2I0MQaThtbxoOuf7N6tVfzU9sFb+sQZqtM95t5mTHadpfgAzraVGwknqOAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnShowDirection.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAKUAAAAkCAYAAADox/qnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE8SURBVHhe7dyhTgQxFEbhSiQSiUQi9xH2EXC7gpnZrELi
+        wDDbrEEieSwkEolEtaXduYIJRU7zk5ybfO6OO2mmpo5h/sXcHtP1cEjb7BFYyHbn48qS+3vK0uDD2+BT
+        AlroxvDRj3FtCc5nCrL+IbC4fHJaitNsHtJZ58N7dRlo4RA+98d0YUlySkJD5+ONJelc7+NdbQloKl+A
+        LEnnTreh2hLQElFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFCDlFC
+        DlFCDlFCDlFCDlFCzs8oe5/uq0tAS7Mox7iuLgEN5Q53lqRzm+d0PvjwVVsEWumf0pUlOU2ptLYItBFe
+        LMX5TP+WnJhoq/fhtTyyZhn+nvyzeXl6W6jcyIEFlUOwPNBr6TGM6jj3DWORToN88WHTAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <data name="btnCheckNow.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKUAAAAkCAYAAADox/qnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
